# mcp-carbon-calculator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  claude_desktop_config.json  eslint.config.js  eslint.config.mts  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml  docker-build-push.yml  docker-image.yml  hf_space_deploy.yml  makefile.yml
.husky/: pre-commit
copilot/: .workspace
copilot/mcp-carbon-calc/: manifest.yml
data/: emissions_factors_nga_2024.json
scripts/: setup.sh  test-deployed.sh
src/: calculator.py  config.py  data.py  index.ts  main.py  models.py  types.ts  utils.py
src/calculators/: electricity.ts  equivalencies.ts  gas.ts
src/config/: tools.ts
src/data/: emissions.ts  equivalencies.ts
src/handlers/: mcp.ts  sse.ts
src/templates/: index.html  main.css
src/utils/: cors.ts  helper.ts
