[project]
name = "mcp-carbon-calculator"
version = "0.1.0"
description = "Advanced MCP server for computing CO₂e emissions from electricity and gas usage across Australia, with JSON-RPC integration for AI assistants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "websockets>=15.0.1",
    "uvicorn>=0.32.1",
]
